--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -3,11 +3,34 @@
     padding: 0px;
 }
 
-h1 {
-    margin: 50px;
-    color:brown;
+.navbar {
+    height: 50px;
 }
 
-body {
-    background-color: red;
+h1 {
+    color: orange;
+}
+
+h4 {
+    margin: 30px 75px;
+    text-decoration: underline;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+}
+
+label {
+    display: inline-block;
+    margin-bottom: 0.5rem;
+}
+
+#info {
+    margin-top: 50px;
+}
+
+.form-control {
+    width: 200px;
+    display: inline-block;
 }
