--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -34,3 +34,11 @@ label {
     width: 200px;
     display: inline-block;
 }
+
+.jumbotron {
+    margin-top: 40px;
+}
+
+.navbar {
+    margin-bottom: 20px;
+}
